@@ -7,25 +7,26 @@ rvm:
   - 2.1
   - 2.2
   - 2.3.0
-  - jruby-9.1.2.0
-  - rbx-3.25
+  - 2.4.0-rc1
+  - jruby-9.1.6.0
+  - rbx-3.69
   - ruby-head
 env:
   NET_SSH_RUN_INTEGRATION_TESTS=1
 
 matrix:
   exclude:
-    - rvm: rbx-3.25
-    - rvm: jruby-9.1.2.0
+    - rvm: rbx-3.69
+    - rvm: jruby-9.1.6.0
   include:
-    - rvm: rbx-3.25
+    - rvm: rbx-3.69
       env: NET_SSH_RUN_INTEGRATION_TESTS=
-    - rvm: jruby-9.1.2.0
+    - rvm: jruby-9.1.6.0
       env: JRUBY_OPTS='--client -J-XX:+TieredCompilation -J-XX:TieredStopAtLevel=1 -Xcext.enabled=false -J-Xss2m -Xcompile.invokedynamic=false' NET_SSH_RUN_INTEGRATION_TESTS=
   fast_finish: true
   allow_failures:
-    - rvm: rbx-3.25
-    - rvm: jruby-9.1.2.0
+    - rvm: rbx-3.69
+    - rvm: jruby-9.1.6.0
     - rvm: ruby-head
 
 install:
