@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 # Specify your gem's dependencies in mygem.gemspec
 gemspec
 
-unless Gem.win_platform? || RUBY_PLATFORM == "java"
+if !Gem.win_platform? && RUBY_ENGINE == "mri"
   gem 'byebug', group: [:development, :test]
 end
 
