@@ -33,8 +33,8 @@ module Net; module SSH; module Transport
     }
 
     # Ruby's OpenSSL bindings always return a key length of 16 for RC4 ciphers
-    # resulting in the error: OpenSSL::CipherError: key length too short. 
-    # The following ciphers will override this key length. 
+    # resulting in the error: OpenSSL::CipherError: key length too short.
+    # The following ciphers will override this key length.
     KEY_LEN_OVERRIDE = {
       "arcfour256"                  => 32,
       "arcfour512"                  => 64
@@ -57,7 +57,7 @@ module Net; module SSH; module Transport
     def self.get(name, options={})
       ossl_name = SSH_TO_OSSL[name] or raise NotImplementedError, "unimplemented cipher `#{name}'"
       return IdentityCipher if ossl_name == "none"
-      cipher = OpenSSL::Cipher::Cipher.new(ossl_name)
+      cipher = OpenSSL::Cipher.new(ossl_name)
 
       cipher.send(options[:encrypt] ? :encrypt : :decrypt)
 
@@ -85,7 +85,7 @@ module Net; module SSH; module Transport
         result = [0, 0]
         result << 0 if options[:iv_len]
       else
-        cipher = OpenSSL::Cipher::Cipher.new(ossl_name)
+        cipher = OpenSSL::Cipher.new(ossl_name)
         key_len = KEY_LEN_OVERRIDE[name] || cipher.key_len
         cipher.key_len = key_len
 
