@@ -1,5 +1,6 @@
 === 4.0.0.rc2
 
+ * Fixed OpenSSL 2.0/Ruby 2.4.0 warnings [Miklós Fazekas, #468]
  * Added ssh-ed25519 to KnownHosts:SUPPORTED_TYPE [detatka-kuzlatka-otevrete, Miklós Fazekas, #459]
  * Allow nil for :passhrase and passing in nil option is now a depreaction warning [Miklós Fazekas, #465]
 
